--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ petgraph = "0.8.2"
 serde = { version = "1.0", features = ["derive"] }
 walkdir = "2.5.0"
 toml = "0.9.5"
+indicatif = "0.18.0"
 
 [dev-dependencies]
 tempfile = "3.20.0"
