--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
 name = "pydep-mapper"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+description = "CLI to parse Python code and build a dependency graph (RustPython + petgraph)."
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/az-fouche/dep-mapper-rust/"
+homepage = "https://github.com/az-fouche/dep-mapper-rust/"
+keywords = ["python", "dependencies", "graph", "cli", "rustpython"]
+categories = ["command-line-utilities", "parsing", "development-tools"]
+rust-version = "1.74"
 
 [dependencies]
 rustpython-parser = "0.4"
