--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "pydep-mapper"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 description = "CLI to parse Python code and build a dependency graph (RustPython + petgraph)."
-license = "MIT OR Apache-2.0"
+license = "MIT"
 readme = "README.md"
 repository = "https://github.com/az-fouche/dep-mapper-rust/"
 homepage = "https://github.com/az-fouche/dep-mapper-rust/"
 keywords = ["python", "dependencies", "graph", "cli", "rustpython"]
 categories = ["command-line-utilities", "parsing", "development-tools"]
-rust-version = "1.74"
+rust-version = "1.89.0"
 
 [dependencies]
 rustpython-parser = "0.4"
