--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ anyhow = "1.0"
 clap = { version = "4.0", features = ["derive"] }
 petgraph = "0.8.2"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 walkdir = "2.5.0"
 toml = "0.9.5"
 indicatif = "0.18.0"
