feat: improve external detection

--- a/src/tools/package_mappings.json
+++ b/src/tools/package_mappings.json
@@ -4,6 +4,7 @@
     "umap": "umap-learn",
     "cv2": "opencv-python",
     "PIL": "pillow",
+    "pil": "pillow",
     "skimage": "scikit-image",
     "yaml": "pyyaml",
     "serial": "pyserial",
@@ -12,12 +13,37 @@
     "requests_oauthlib": "requests-oauthlib",
     "google_auth": "google-auth",
     "google_auth_oauthlib": "google-auth-oauthlib",
+    "googleapiclient": "google-api-python-client",
+    "google.cloud.storage": "google-cloud-storage",
     "pytest_bdd": "pytest-bdd",
     "pytest_mock": "pytest-mock",
     "pytest_cov": "pytest-cov",
     "dash_bootstrap_components": "dash-bootstrap-components",
     "dash_mantine_components": "dash-mantine-components",
     "dataclasses_json": "dataclasses-json",
-    "sentence_transformers": "sentence-transformers"
+    "sentence_transformers": "sentence-transformers",
+    "annotated_text": "st-annotated-text",
+    "hydra": "hydra-core",
+    "ibis": "ibis-framework",
+    "openslide": "openslide-python",
+    "ot": "pot",
+    "pytorch_lightning": "lightning",
+    "scvi": "scvi-tools",
+    "mpl_toolkits": "matplotlib",
+    "pkg_resources": "setuptools",
+    "levenshtein": "python-levenshtein",
+    "email_validator": "email-validator",
+    "python_magic": "python-magic",
+    "python_speech_features": "python-speech-features",
+    "pydantic_settings": "pydantic-settings",
+    "sqlalchemy": "sqlalchemy",
+    "catalogue": "catalogue",
+    "murmurhash": "murmurhash",
+    "preshed": "preshed",
+    "srsly": "srsly",
+    "thinc": "thinc",
+    "wasabi": "wasabi",
+    "IPython": "ipython",
+    "ipython": "ipython"
   }
 }
